두번째 가사 입력 추가

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         떠나면 안 돼요<br>
         그리움 두고 머나먼 길<br>
         그대 무지개를 찾아올 순 없어요
+        <br><br>
+        노을 진 창가에 앉아<br>
+        멀리 떠가는 구름을 보며<br>
+        찾고 싶은 옛 생각들<br>
+        하늘에 그려요<br>
     </p>
 </body>
 </html>
