--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         나 항상 그대 곁에 머물겠어요<br>
         떠나지 않아요<br>
         <br><br>
+        노을 진 창가에 앉아<br>
+        멀리 떠가는 구름을 보며<br>
+        찾고 싶은 옛 생각들<br>
+        하늘에 그려요<br>
+        <br><br>
+        음 불어오는 차가운 바람 속에<br>
+        그대 외로워 울지만<br>
+        나 항상 그대 곁에 머물겠어요<br>
+        떠나지 않아요<br>
     </p>
 </body>
 </html>
