첫번째 가사 추가

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 
     <h1>붉은 노을</h1>
     <p>
+        붉게 물든 노을 바라보면<br>
+        슬픈 그대 얼굴 생각이나 고개 숙이네<br>
+        눈물 흘러 아무 말 할 수가 없지만<br>
     </p>
 </body>
 </html>
