--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         내 곁에만 머물러요<br>
         떠나면 안 돼요<br>
         그리움 두고 머나먼 길<br>
-        그대 무지개를 찾아올 순 없어요
+        그대 무지개를 찾아올 순 없어요<br>
         <br><br>
         노을 진 창가에 앉아<br>
         멀리 떠가는 구름을 보며<br>
@@ -42,7 +42,9 @@
         <br><br>
         난 너를 사랑하네 이 세상은 너 뿐이야 소리쳐 부르지만<br>
         저 대답 없는 노을만 붉게 타는데<br>
-
+        <br><br>
+        그 세월 속에 잊어야할 기억들이<br>
+        다시 생각나면 눈감아요 소리 없이 그 이름 불러요<br>
     </p>
 </body>
 </html>
