네번째 가사 추가

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         <br><br>
         그 세월 속에 잊어야할 기억들이<br>
         다시 생각나면 눈감아요 소리 없이 그 이름 불러요<br>
+        <br><br>
+        아름다웠던 그대모습 다시 볼 수 없는 것 알아요<br>
+        후회 없어 저 타는 노을 붉은 노을처럼<br>
+        <br><br>
     </p>
 </body>
 </html>
