--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>아무거나</title>
+    <style>
+        img {
+            width: 640px;
+            height: 480px;
+            object-fit:cover;
+        }
+    </style>
 </head>
 <body>
+    <img src="https://image.ytn.co.kr/general/jpg/2023/0805/202308050900012419_d.jpg" alt="소녀 이미지">
     <h1>소녀</h1>
     <p>
         내 곁에만 머물러요<br>
@@ -33,7 +41,7 @@
         나 항상 그대 곁에 머물겠어요<br>
         떠나지 않아요<br>
     </p>
-
+    <img src="https://www.ttlnews.com/upload/editor_content_images/1540060547315_editor_image.jpg" alt="붉은 노을">
     <h1>붉은 노을</h1>
     <p>
         붉게 물든 노을 바라보면<br>
