p태그에 font 설정

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
             height: 480px;
             object-fit:cover;
         }
+        p{
+            font-family: '맑은 고딕' ;
+            color: #02f;
+            font-size: 2em;
+        }
     </style>
 </head>
 <body>
